--- a/Hospital.WPF/Controls/Registrator/RegPatientTable.xaml
+++ b/Hospital.WPF/Controls/Registrator/RegPatientTable.xaml
@@ -25,8 +25,8 @@
         </StackPanel>
         <StackPanel Orientation="Horizontal" Grid.Row="0" HorizontalAlignment="Right">
             <Button Content="РЕГИСТРАЦИЯ" Grid.Row="0" HorizontalAlignment="Right"
-                    Command="{Binding RelativeSource={RelativeSource AncestorType={x:Type view:Registrator}}, Path=Command.SetBody}"
-                    CommandParameter="Edit"/>
+                    Command="{Binding Path=Command.EditPatient, RelativeSource={RelativeSource AncestorType={x:Type view:Registrator}}}"
+                    CommandParameter="true"/>
         </StackPanel>
 
         <DataGrid Grid.Row="1" ItemsSource="{Binding Patients}" Style="{StaticResource TableCommon}">
