--- a/Hospital.WPF/Views/Schedule.xaml
+++ b/Hospital.WPF/Views/Schedule.xaml
@@ -1,13 +1,76 @@
-﻿<UserControl x:Class="Hospital.WPF.Views.Schedule"
+﻿<UserControl x:Class="Hospital.WPF.Views.Schedule" x:Name="ScheduleView"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:Hospital.WPF.Views"
+      xmlns:con="clr-namespace:Hospital.WPF.Services"
+      xmlns:vm="clr-namespace:Hospital.ViewModel;assembly=Hospital.ViewModel"
       mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800">
+      d:DesignHeight="450" d:DesignWidth="868.296">
+
+    <UserControl.Resources>
+        <con:ScheduleRowCountConverter x:Key="RowConverter"/>
+    </UserControl.Resources>
 
     <Grid>
-        <TextBlock Text="test schedule"/>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="45"/>
+            <RowDefinition/>
+        </Grid.RowDefinitions>
+        <Border Grid.Row="0" Background="{StaticResource BrushPrimaryPanel}" Effect="{StaticResource EffectShadowDown}"/>
+        <StackPanel Grid.Row="0" Orientation="Horizontal">
+            
+            <Button Content="previous" Command="{Binding ElementName=ScheduleView, Path=Command.PreviousDate}"/>
+            
+            <DatePicker SelectedDate="{Binding SelectedDate}"/>
+
+            <Button Content="next" Command="{Binding ElementName=ScheduleView, Path=Command.NextDate}"/>
+
+        </StackPanel>
+        <Grid Grid.Row="1">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition MinWidth="270"/>
+                <ColumnDefinition MinWidth="200" MaxWidth="400" Width="300"/>
+            </Grid.ColumnDefinitions>
+
+            <ListBox x:Name="ListBoxSchedule" Grid.Column="0" ItemsSource="{Binding Entries}"
+                     ScrollViewer.HorizontalScrollBarVisibility="Disabled" HorizontalAlignment="Stretch">
+                <ListBox.ItemsPanel>
+                    <ItemsPanelTemplate>
+                        <WrapPanel Orientation="Horizontal" HorizontalAlignment="Stretch"/>
+                    </ItemsPanelTemplate>
+                </ListBox.ItemsPanel>
+                <ListBox.ItemTemplate>
+                    <DataTemplate>
+                        <Grid Height="75" Margin="10">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="75"/>
+                                <ColumnDefinition Width="auto"/>
+                            </Grid.ColumnDefinitions>
+                            <Border Grid.ColumnSpan="2" Background="{DynamicResource BrushBackgroundPaper}" Effect="{StaticResource ShadowCard}"/>
+                            <StackPanel Orientation="Horizontal" Grid.Column="0" HorizontalAlignment="Center">
+                                <TextBlock Text="{Binding TargetDateTime, StringFormat=HH}" FontSize="28" VerticalAlignment="Center"/>
+                                <TextBlock Text="{Binding TargetDateTime, StringFormat=:mm}" FontSize="22" VerticalAlignment="Center" Padding="0,4,0,0"/>
+                            </StackPanel>
+                            <StackPanel Orientation="Vertical" Grid.Column="1" VerticalAlignment="Center" Margin="10,0" >
+                                <StackPanel.Width>
+                                    <MultiBinding Converter="{StaticResource RowConverter}">
+                                        <Binding ElementName="ListBoxSchedule" Path="ActualWidth"/>
+                                        <Binding ElementName="ScheduleView" Path="TileColumnCount"/>
+                                    </MultiBinding>
+                                </StackPanel.Width>
+                                <TextBlock Text="{Binding Patient.FirstName, Converter={StaticResource ToUpperCaseConverter}}" FontSize="17"/>
+                                <TextBlock Text="{Binding Patient.MidName}" FontSize="17" Margin="0,-2"/>
+                                <TextBlock Text="{Binding Patient.LastName}" FontSize="17"/>
+                            </StackPanel>
+                        </Grid>
+                    </DataTemplate>
+                </ListBox.ItemTemplate>
+            </ListBox>
+            
+            <Border Grid.Column="1" Background="{StaticResource BrushPrimaryPanel}"/>
+            <GridSplitter Grid.Column="1" ResizeDirection="Columns" HorizontalAlignment="Left" BorderThickness="2" BorderBrush="Red"/>
+        </Grid>
     </Grid>
 </UserControl>
