--- a/Hospital.WPF/Views/Schedule.xaml
+++ b/Hospital.WPF/Views/Schedule.xaml
@@ -4,11 +4,17 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:Hospital.WPF.Views"
+      xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
+      xmlns:controls="clr-namespace:Hospital.WPF.Controls.Schedule"
       xmlns:con="clr-namespace:Hospital.WPF.Services"
       xmlns:vm="clr-namespace:Hospital.ViewModel;assembly=Hospital.ViewModel"
-      mc:Ignorable="d" 
+      mc:Ignorable="d"
       d:DesignHeight="450" d:DesignWidth="868.296">
 
+    <!--<UserControl.DataContext>
+        <vm:ScheduleViewModel/>
+    </UserControl.DataContext>-->
+    
     <UserControl.Resources>
         <con:ScheduleRowCountConverter x:Key="RowConverter"/>
     </UserControl.Resources>
@@ -18,7 +24,7 @@
             <RowDefinition Height="45"/>
             <RowDefinition/>
         </Grid.RowDefinitions>
-        <Border Grid.Row="0" Background="{StaticResource BrushPrimaryPanel}" Effect="{StaticResource EffectShadowDown}"/>
+        <Border Grid.Row="0" BorderBrush="{StaticResource BrushPrimaryBorderLight}" BorderThickness="0,0,0,1" Background="{StaticResource BrushPrimaryPanel}" Effect="{StaticResource EffectShadowDown}"/>
         <StackPanel Grid.Row="0" Orientation="Horizontal">
             
             <Button Content="previous" Command="{Binding ElementName=ScheduleView, Path=Command.PreviousDate}"/>
@@ -35,42 +41,75 @@
             </Grid.ColumnDefinitions>
 
             <ListBox x:Name="ListBoxSchedule" Grid.Column="0" ItemsSource="{Binding Entries}"
+                     SelectedItem="{Binding CurrentEntry}" Background="Transparent" Margin="10"
                      ScrollViewer.HorizontalScrollBarVisibility="Disabled" HorizontalAlignment="Stretch">
                 <ListBox.ItemsPanel>
                     <ItemsPanelTemplate>
                         <WrapPanel Orientation="Horizontal" HorizontalAlignment="Stretch"/>
                     </ItemsPanelTemplate>
                 </ListBox.ItemsPanel>
-                <ListBox.ItemTemplate>
-                    <DataTemplate>
-                        <Grid Height="75" Margin="10">
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="75"/>
-                                <ColumnDefinition Width="auto"/>
-                            </Grid.ColumnDefinitions>
-                            <Border Grid.ColumnSpan="2" Background="{DynamicResource BrushBackgroundPaper}" Effect="{StaticResource ShadowCard}"/>
-                            <StackPanel Orientation="Horizontal" Grid.Column="0" HorizontalAlignment="Center">
-                                <TextBlock Text="{Binding TargetDateTime, StringFormat=HH}" FontSize="28" VerticalAlignment="Center"/>
-                                <TextBlock Text="{Binding TargetDateTime, StringFormat=:mm}" FontSize="22" VerticalAlignment="Center" Padding="0,4,0,0"/>
-                            </StackPanel>
-                            <StackPanel Orientation="Vertical" Grid.Column="1" VerticalAlignment="Center" Margin="10,0" >
-                                <StackPanel.Width>
-                                    <MultiBinding Converter="{StaticResource RowConverter}">
-                                        <Binding ElementName="ListBoxSchedule" Path="ActualWidth"/>
-                                        <Binding ElementName="ScheduleView" Path="TileColumnCount"/>
-                                    </MultiBinding>
-                                </StackPanel.Width>
-                                <TextBlock Text="{Binding Patient.FirstName, Converter={StaticResource ToUpperCaseConverter}}" FontSize="17"/>
-                                <TextBlock Text="{Binding Patient.MidName}" FontSize="17" Margin="0,-2"/>
-                                <TextBlock Text="{Binding Patient.LastName}" FontSize="17"/>
-                            </StackPanel>
-                        </Grid>
-                    </DataTemplate>
-                </ListBox.ItemTemplate>
+                <ListBox.ItemContainerStyle>
+                    <Style TargetType="{x:Type ListBoxItem}">
+                        <Setter Property="Foreground" Value="{StaticResource BrushForegroundMid}"/>
+                        <Setter Property="Template">
+                            <Setter.Value>
+                                <ControlTemplate TargetType="{x:Type ListBoxItem}">
+                                    <Grid Height="75" Margin="10">
+                                        <Grid.ColumnDefinitions>
+                                            <ColumnDefinition Width="75"/>
+                                            <ColumnDefinition Width="auto"/>
+                                        </Grid.ColumnDefinitions>
+                                        <Border x:Name="TileBorder" Grid.ColumnSpan="2" Background="{DynamicResource BrushBackgroundPaper}" Effect="{StaticResource ShadowCard}"/>
+                                        <Border x:Name="StatusBorder" Grid.Column="0" Background="White" HorizontalAlignment="Right" Width="3" Height="60"/>
+                                        <StackPanel Orientation="Horizontal" Grid.Column="0" HorizontalAlignment="Center">
+                                            <TextBlock x:Name="TextHour" Text="{Binding TargetDateTime, StringFormat=HH}" FontSize="28" VerticalAlignment="Center"/>
+                                            <TextBlock x:Name="TextMinute" Text="{Binding TargetDateTime, StringFormat=:mm}" FontSize="22" VerticalAlignment="Center" Padding="0,4,0,0"/>
+                                        </StackPanel>
+                                        <StackPanel Orientation="Vertical" Grid.Column="1" VerticalAlignment="Center" Margin="10,0" >
+                                            <StackPanel.Width>
+                                                <MultiBinding Converter="{StaticResource RowConverter}">
+                                                    <Binding ElementName="ListBoxSchedule" Path="ActualWidth"/>
+                                                    <Binding ElementName="ScheduleView" Path="TileColumnCount"/>
+                                                </MultiBinding>
+                                            </StackPanel.Width>
+                                            <TextBlock x:Name="TextFirstName" Text="{Binding Patient.FirstName, Converter={StaticResource ToUpperCaseConverter}}" FontSize="17"/>
+                                            <TextBlock x:Name="TextMidName" Text="{Binding Patient.MidName}" FontSize="17" Margin="0,-2"/>
+                                            <TextBlock x:Name="TextLastName" Text="{Binding Patient.LastName}" FontSize="17"/>
+                                        </StackPanel>
+                                    </Grid>
+                                    <ControlTemplate.Triggers>
+                                        <Trigger Property="IsSelected" Value="True">
+                                            <Setter Property="FontWeight" TargetName="TextFirstName" Value="Bold"/>
+                                            <Setter Property="FontWeight" TargetName="TextMidName" Value="Bold"/>
+                                            <Setter Property="FontWeight" TargetName="TextLastName" Value="Bold"/>
+                                            <Setter Property="Foreground" TargetName="TextHour" Value="{DynamicResource BrushBackgroundPaper}"/>
+                                            <Setter Property="Foreground" TargetName="TextMinute" Value="{DynamicResource BrushBackgroundPaper}"/>
+                                            <Setter Property="Width" TargetName="StatusBorder" Value="75"/>
+                                            <Setter Property="Height" TargetName="StatusBorder" Value="75"/>
+                                        </Trigger>
+                                        <Trigger Property="IsMouseOver" Value="True">
+                                            <Setter Property="BorderThickness" TargetName="TileBorder" Value="2"/>
+                                            <Setter Property="BorderBrush" TargetName="TileBorder" Value="{DynamicResource BrushPrimaryBorderDark}"/>
+                                        </Trigger>
+                                        <DataTrigger Binding="{Binding EntryStatus}" Value="Await">
+                                            <Setter Property="Background" TargetName="StatusBorder" Value="{DynamicResource BrushAccentPositive}"/>
+                                        </DataTrigger>
+                                        <DataTrigger Binding="{Binding EntryStatus}" Value="Open">
+                                            <Setter Property="Background" TargetName="StatusBorder" Value="DarkViolet"/>
+                                        </DataTrigger>
+                                    </ControlTemplate.Triggers>
+                                </ControlTemplate>
+                            </Setter.Value> 
+                        </Setter>
+                    </Style>
+                </ListBox.ItemContainerStyle>
             </ListBox>
             
-            <Border Grid.Column="1" Background="{StaticResource BrushPrimaryPanel}"/>
-            <GridSplitter Grid.Column="1" ResizeDirection="Columns" HorizontalAlignment="Left" BorderThickness="2" BorderBrush="Red"/>
+            <ContentControl Grid.Column="1">
+                <controls:InfoPanel  BorderThickness="1,0,0,0" BorderBrush="{StaticResource BrushPrimaryBorderLight}"/>
+            </ContentControl>
+            <GridSplitter Grid.Column="1" ResizeDirection="Columns" HorizontalAlignment="Left" BorderThickness="2" BorderBrush="Transparent"/>
+            
         </Grid>
     </Grid>
 </UserControl>
