--- a/Hospital.WPF/Controls/Schedule/InfoPanel.xaml
+++ b/Hospital.WPF/Controls/Schedule/InfoPanel.xaml
@@ -7,9 +7,17 @@
              xmlns:local="clr-namespace:Hospital.WPF.Controls.Schedule"
              xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
              mc:Ignorable="d" Foreground="{StaticResource BrushForegroundMid}"
-             d:DesignHeight="417.911" d:DesignWidth="341.58">
+             d:DesignHeight="524.011" d:DesignWidth="341.58">
 
     <!--<UserControl.DataContext> <vm:ScheduleViewModel/> </UserControl.DataContext>-->
+    <UserControl.Resources>
+        <Style TargetType="{x:Type TextBlock}">
+            <Setter Property="FontSize" Value="15"/>
+            <Setter Property="Padding" Value="10,3"/>
+            <Setter Property="TextWrapping" Value="WrapWithOverflow"/>
+            <Setter Property="Foreground" Value="{StaticResource BrushForegroundMid}"/>
+        </Style>
+    </UserControl.Resources>
     
     <Grid>
         <Grid.RowDefinitions>
@@ -29,27 +37,27 @@
                 <TextBlock x:Name="TextMinute" Text="{Binding CurrentEntry.TargetDateTime, StringFormat=:mm}" FontSize="32" VerticalAlignment="Center" Padding="0,4,0,0"/>
             </StackPanel>
             <StackPanel Grid.Column="1" Margin="10,0" Orientation="Vertical" VerticalAlignment="Center">
-                <TextBlock x:Name="TextFirstName" Text="{Binding CurrentEntry.Patient.FirstName, Converter={StaticResource ToUpperCaseConverter}}" FontSize="22"/>
-                <TextBlock x:Name="TextMidName" Text="{Binding CurrentEntry.Patient.MidName}" FontSize="22" Margin="0,-5"/>
-                <TextBlock x:Name="TextLastName" Text="{Binding CurrentEntry.Patient.LastName}" FontSize="22"/>
+                <TextBlock x:Name="TextFirstName" Text="{Binding CurrentEntry.Patient.FirstName, Converter={StaticResource ToUpperCaseConverter}}" FontSize="22" Margin="0,-5"/>
+                <TextBlock x:Name="TextMidName" Text="{Binding CurrentEntry.Patient.MidName}" FontSize="22" Margin="0,-8"/>
+                <TextBlock x:Name="TextLastName" Text="{Binding CurrentEntry.Patient.LastName}" FontSize="22" Margin="0,-5"/>
             </StackPanel>
             <Border Width="1" Height="70" Grid.Column="0" Background="{StaticResource BrushPrimaryBorderLight}" HorizontalAlignment="Right"/>
         </Grid>
 
         <StackPanel Grid.Row="1" Orientation="Vertical">
             <Expander Template="{DynamicResource ExpanderTemplate}"
-                      BorderThickness="0" IsExpanded="False"
-                      Foreground="{DynamicResource BrushForegroundLight}"
+                      BorderThickness="0" IsExpanded="False" FontSize="15"
+                      Foreground="{DynamicResource BrushForegroundVeryLight}"
                       Background="{DynamicResource BrushPrimaryPanel}"
                       Header="Заметка">
                 <StackPanel Orientation="Vertical">
-                    <TextBox Text="текст заметки к записи" Margin="2" FontStyle="Italic" IsReadOnly="True" Background="Transparent" BorderThickness="0"/>
+                    <TextBox Text="текст заметки к записи" Margin="15,2" FontStyle="Italic" IsReadOnly="True" Background="Transparent" BorderThickness="0"/>
                     <Border Height="1" Background="{DynamicResource BrushPrimaryBorderLight}" VerticalAlignment="Bottom"/>
                 </StackPanel>
             </Expander>
             <Expander Template="{DynamicResource ExpanderTemplate}"
                       BorderThickness="0" IsExpanded="True"
-                      Foreground="{DynamicResource BrushForegroundLight}"
+                      Foreground="{DynamicResource BrushForegroundVeryLight}"
                       Background="{DynamicResource BrushPrimaryPanel}">
                 <Expander.Header>
                     <Grid>
@@ -57,13 +65,12 @@
                             <ColumnDefinition Width="55*"/>
                             <ColumnDefinition Width="45*"/>
                         </Grid.ColumnDefinitions>
-                        <TextBlock Grid.Column="0" Text="Направление"/>
-                        <TextBox BorderThickness="0" HorizontalAlignment="Left" IsReadOnly="True" MinHeight="5" VerticalContentAlignment="Center" FontSize="12" Foreground="{DynamicResource BrushForegroundMid}" Height="16" Padding="0" Margin="0" Grid.Column="1"
-                                 Text="{Binding CurrentEntry.Id, StringFormat=№ 0}"/>
+                        <TextBlock Grid.Column="0" Text="Направление" Padding="0" Foreground="{DynamicResource BrushForegroundVeryLight}"/>
+                        <TextBlock Grid.Column="1" Text="{Binding CurrentEntry.Id, StringFormat=№ 0}" Padding="0" Foreground="{DynamicResource BrushForegroundVeryLight}"/>
                     </Grid>
                 </Expander.Header>
                 <StackPanel Orientation="Vertical">
-                    <Grid Margin="10,5">
+                    <Grid Margin="5">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition/>
                             <ColumnDefinition/>
@@ -77,9 +84,9 @@
                         <TextBlock Text="Дата регистрации" Grid.Column="0" Grid.Row="1"/>
                         <TextBlock Text="Статус" Grid.Column="0" Grid.Row="2"/>
                         <Border Width="1" Grid.Column="0" Grid.RowSpan="3" Background="{DynamicResource BrushPrimaryBorderLight}" HorizontalAlignment="Right"/>
-                        <TextBlock Text="{Binding CurrentEntry.Registrator.FirstName}" Grid.Column="1" Grid.Row="0"/>
-                        <TextBlock Text="{Binding CurrentEntry.CreateDateTime}" Grid.Column="1" Grid.Row="1"/>
-                        <TextBlock Text="{Binding CurrentEntry.EntryStatus}" Grid.Column="1" Grid.Row="2"/>
+                        <TextBlock Text="{Binding CurrentEntry.Registrator.FirstName}" Grid.Column="1" Grid.Row="0" />
+                        <TextBlock Text="{Binding CurrentEntry.CreateDateTime, StringFormat=dd.MM.yyyy}" Grid.Column="1" Grid.Row="1"/>
+                        <TextBlock Text="{Binding CurrentEntry.EntryStatus}" Grid.Column="1" Grid.Row="2" />
 
                     </Grid>
                     <Border Height="1" Background="{DynamicResource BrushPrimaryBorderLight}" VerticalAlignment="Bottom"/>
@@ -87,7 +94,7 @@
             </Expander>
             <Expander Template="{DynamicResource ExpanderTemplate}"
                       BorderThickness="0" IsExpanded="True"
-                      Foreground="{DynamicResource BrushForegroundLight}"
+                      Foreground="{DynamicResource BrushForegroundVeryLight}"
                       Background="{DynamicResource BrushPrimaryPanel}">
                 <Expander.Header>
                     <Grid>
@@ -95,13 +102,12 @@
                             <ColumnDefinition Width="55*"/>
                             <ColumnDefinition Width="45*"/>
                         </Grid.ColumnDefinitions>
-                        <TextBlock Grid.Column="0" Text="Медицинская карта"/>
-                        <TextBox BorderThickness="0" HorizontalAlignment="Left" IsReadOnly="True" MinHeight="5" VerticalContentAlignment="Center" FontSize="12" Foreground="{DynamicResource BrushForegroundMid}" Height="16" Padding="0" Margin="0" Grid.Column="1"
-                                 Text="{Binding CurrentEntry.MedCardId, StringFormat=№ 0}"/>
+                        <TextBlock Grid.Column="0" Text="Медицинская карта" Padding="0" Foreground="{DynamicResource BrushForegroundVeryLight}"/>
+                        <TextBlock Padding="0" Grid.Column="1" Text="{Binding CurrentEntry.MedCardId, StringFormat=№ 0}" Foreground="{DynamicResource BrushForegroundVeryLight}"/>
                     </Grid>
                 </Expander.Header>
                 <StackPanel Orientation="Vertical">
-                    <Grid Margin="10,5">
+                    <Grid Margin="5">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition/>
                             <ColumnDefinition/>
@@ -112,20 +118,19 @@
                             <RowDefinition/>
                         </Grid.RowDefinitions>
                         <TextBlock Text="Отделение" Grid.Column="0" Grid.Row="0"/>
-                        <TextBlock Text="Текущий врач" Grid.Column="0" Grid.Row="1"/>
+                        <TextBlock Text="Лечащий врач" Grid.Column="0" Grid.Row="1"/>
                         <TextBlock Text="Диагноз" Grid.Column="0" Grid.Row="2"/>
                         <Border Width="1" Grid.Column="0" Grid.RowSpan="3" Background="{DynamicResource BrushPrimaryBorderLight}" HorizontalAlignment="Right"/>
-                        <TextBlock Text="{Binding CurrentEntry.MedCard.Doctor.Department.Title.Title}" Grid.Column="1" Grid.Row="0"/>
-                        <TextBlock Text="{Binding CurrentEntry.MedCard.Doctor.FirstName}" Grid.Column="1" Grid.Row="1"/>
-                        <TextBlock Text="{Binding CurrentEntry.MedCard.Diagnosis.Title}" Grid.Column="1" Grid.Row="2"/>
+                        <TextBlock Text="{Binding CurrentEntry.MedCard.Doctor.Department.Title.Title}" Grid.Column="1" Grid.Row="0" />
+                        <TextBlock Text="{Binding CurrentEntry.MedCard.Doctor.FirstName}" Grid.Column="1" Grid.Row="1" />
+                        <TextBlock Text="{Binding CurrentEntry.MedCard.Diagnosis.Title}" Grid.Column="1" FontWeight="Bold" Grid.Row="2" />
                     </Grid>
                     <Border Height="1" Background="{DynamicResource BrushPrimaryBorderLight}" VerticalAlignment="Bottom"/>
                 </StackPanel>
             </Expander>
-
             <Expander Template="{DynamicResource ExpanderTemplate}"
                       BorderThickness="0" IsExpanded="True"
-                      Foreground="{DynamicResource BrushForegroundLight}"
+                      Foreground="{DynamicResource BrushForegroundVeryLight}"
                       Background="{DynamicResource BrushPrimaryPanel}">
                 <Expander.Header>
                     <Grid>
@@ -133,13 +138,12 @@
                             <ColumnDefinition Width="55*"/>
                             <ColumnDefinition Width="45*"/>
                         </Grid.ColumnDefinitions>
-                        <TextBlock Grid.Column="0" Text="Личная информация"/>
-                        <TextBox BorderThickness="0" HorizontalAlignment="Left" IsReadOnly="True" MinHeight="5" VerticalContentAlignment="Center" FontSize="12" Foreground="{DynamicResource BrushForegroundMid}" Height="16" Padding="0" Margin="0" Grid.Column="1"
-                                 Text="{Binding CurrentEntry.PatientId, StringFormat=№ 0}"/>
+                        <TextBlock Grid.Column="0" Text="Личная карта" Padding="0" Foreground="{DynamicResource BrushForegroundVeryLight}"/>
+                        <TextBlock Padding="0" Grid.Column="1" Text="{Binding CurrentEntry.PatientId, StringFormat=№ 0}" Foreground="{DynamicResource BrushForegroundVeryLight}"/>
                     </Grid>
                 </Expander.Header>
                 <StackPanel Orientation="Vertical">
-                    <Grid Margin="10,5">
+                    <Grid Margin="5">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition/>
                             <ColumnDefinition/>
@@ -154,36 +158,71 @@
                         </Grid.RowDefinitions>
                         <TextBlock Text="Возраст:" Grid.Column="0" Grid.Row="0"/>
                         <TextBlock Text="Род деятельности:" Grid.Column="0" Grid.Row="1"/>
-                        <TextBlock Text="Семейное положение:" Grid.Column="0" Grid.Row="2"/>
+                        <TextBlock Text="Семейное полож:" Grid.Column="0" Grid.Row="2"/>
                         <TextBlock Text="Номер телефона:" Grid.Column="0" Grid.Row="3"/>
                         <TextBlock Text="Прикрепление:" Grid.Column="0" Grid.Row="4"/>
                         <TextBlock Text="Адрес:" Grid.Column="0" Grid.Row="5"/>
 
-                        <Border Width="1" Grid.Column="0" Grid.RowSpan="3" Background="{DynamicResource BrushPrimaryBorderLight}" HorizontalAlignment="Right"/>
+                        <Border Width="1" Grid.Column="0" Grid.RowSpan="6" Background="{DynamicResource BrushPrimaryBorderLight}" HorizontalAlignment="Right"/>
                         
-                        <TextBlock Text="{Binding CurrentEntry.Patient.BirthDay}" Grid.Column="1" Grid.Row="0"/>
+                        <TextBlock Text="{Binding CurrentEntry.Patient.BirthDay, Converter={StaticResource DateToAgeConverter}}" Grid.Column="1" Grid.Row="0" Padding="10,0"/>
                         <TextBlock Text="не реализовано" Grid.Column="1" Grid.Row="1"/>
                         <TextBlock Grid.Column="1" Grid.Row="2">
                             <TextBlock.Style>
                                 <Style TargetType="{x:Type TextBlock}">
+                                    <Setter Property="Padding" Value="10,4"/>
+                                    <Setter Property="FontSize" Value="15"/>
                                     <Style.Triggers>
-                                        <DataTrigger Binding="{Binding CurrentEntry.Patient.IsMarried}" Value="True">
+                                        <MultiDataTrigger>
+                                            <MultiDataTrigger.Conditions>
+                                                <Condition Binding="{Binding CurrentEntry.Patient.IsMarried}" Value="True"/>
+                                                <Condition Binding="{Binding CurrentEntry.Patient.Gender}" Value="male"/>
+                                            </MultiDataTrigger.Conditions>
                                             <Setter Property="Text" Value="Женат"/>
-                                        </DataTrigger>
+                                        </MultiDataTrigger>
+                                        <MultiDataTrigger>
+                                            <MultiDataTrigger.Conditions>
+                                                <Condition Binding="{Binding CurrentEntry.Patient.IsMarried}" Value="True"/>
+                                                <Condition Binding="{Binding CurrentEntry.Patient.Gender}" Value="female"/>
+                                            </MultiDataTrigger.Conditions>
+                                            <Setter Property="Text" Value="Замужем"/>
+                                        </MultiDataTrigger>
+                                        <MultiDataTrigger>
+                                            <MultiDataTrigger.Conditions>
+                                                <Condition Binding="{Binding CurrentEntry.Patient.IsMarried}" Value="False"/>
+                                                <Condition Binding="{Binding CurrentEntry.Patient.Gender}" Value="male"/>
+                                            </MultiDataTrigger.Conditions>
+                                            <Setter Property="Text" Value="Не женат"/>
+                                        </MultiDataTrigger>
+                                        <MultiDataTrigger>
+                                            <MultiDataTrigger.Conditions>
+                                                <Condition Binding="{Binding CurrentEntry.Patient.IsMarried}" Value="False"/>
+                                                <Condition Binding="{Binding CurrentEntry.Patient.Gender}" Value="female"/>
+                                            </MultiDataTrigger.Conditions>
+                                            <Setter Property="Text" Value="Не замужем"/>
+                                        </MultiDataTrigger>
+
                                     </Style.Triggers>
                                 </Style>
                             </TextBlock.Style>
                         </TextBlock>
                         <TextBlock Text="{Binding CurrentEntry.Patient.PhoneNumber}" Grid.Column="1" Grid.Row="3"/>
-                        <TextBlock Text="Не реализовано" Grid.Column="1" Grid.Row="4"/>
-                        <TextBlock Text="{Binding CurrentEntry.Patient.Adress.City}" Grid.Column="1" Grid.Row="5"/>
+                        <TextBlock Text="Не реализовано" Grid.Column="1" Grid.Row="4" />
+                        <TextBlock Grid.Column="1" Grid.Row="5" >
+                            <TextBlock.Text>
+                                <MultiBinding StringFormat="{}г.{0} ул.{1} д.{2} кв.{3}">
+                                    <Binding Path="CurrentEntry.Patient.Adress.City"/>
+                                    <Binding Path="CurrentEntry.Patient.Adress.Street"/>
+                                    <Binding Path="CurrentEntry.Patient.Adress.Number"/>
+                                    <Binding Path="CurrentEntry.Patient.Adress.Room"/>
+                                </MultiBinding>
+                            </TextBlock.Text>
+                        </TextBlock>
 
                     </Grid>
                     <Border Height="1" Background="{DynamicResource BrushPrimaryBorderLight}" VerticalAlignment="Bottom"/>
                 </StackPanel>
             </Expander>
-
-
         </StackPanel>
         
     </Grid>
