--- a/Hospital.WPF/Views/Schedule.xaml
+++ b/Hospital.WPF/Views/Schedule.xaml
@@ -34,6 +34,11 @@
             <Button Content="next" Command="{Binding ElementName=ScheduleView, Path=Command.NextDate}"/>
 
         </StackPanel>
+        <StackPanel Grid.Row="0" Orientation="Horizontal" HorizontalAlignment="Right">
+            <Button Content="+" Command="{Binding ElementName=ScheduleView, Path=Command.AddColumn}"/>
+            <TextBlock Text="{Binding ElementName=ScheduleView, Path=TileColumnCount}"/>
+            <Button Content="-" Command="{Binding ElementName=ScheduleView, Path=Command.RemoveColumn}"/>
+        </StackPanel>
         <Grid Grid.Row="1">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition MinWidth="270"/>
@@ -55,9 +60,15 @@
                             <Setter.Value>
                                 <ControlTemplate TargetType="{x:Type ListBoxItem}">
                                     <Grid Height="75" Margin="10">
+                                        <Grid.Width>
+                                            <MultiBinding Converter="{StaticResource RowConverter}">
+                                                <Binding ElementName="ListBoxSchedule" Path="ActualWidth"/>
+                                                <Binding ElementName="ScheduleView" Path="TileColumnCount"/>
+                                            </MultiBinding>
+                                        </Grid.Width>
                                         <Grid.ColumnDefinitions>
                                             <ColumnDefinition Width="75"/>
-                                            <ColumnDefinition Width="auto"/>
+                                            <ColumnDefinition Width="*"/>
                                         </Grid.ColumnDefinitions>
                                         <Border x:Name="TileBorder" Grid.ColumnSpan="2" Background="{DynamicResource BrushBackgroundPaper}" Effect="{StaticResource ShadowCard}"/>
                                         <Border x:Name="StatusBorder" Grid.Column="0" Background="White" HorizontalAlignment="Right" Width="3" Height="60"/>
@@ -66,12 +77,6 @@
                                             <TextBlock x:Name="TextMinute" Text="{Binding TargetDateTime, StringFormat=:mm}" FontSize="22" VerticalAlignment="Center" Padding="0,4,0,0"/>
                                         </StackPanel>
                                         <StackPanel Orientation="Vertical" Grid.Column="1" VerticalAlignment="Center" Margin="10,0" >
-                                            <StackPanel.Width>
-                                                <MultiBinding Converter="{StaticResource RowConverter}">
-                                                    <Binding ElementName="ListBoxSchedule" Path="ActualWidth"/>
-                                                    <Binding ElementName="ScheduleView" Path="TileColumnCount"/>
-                                                </MultiBinding>
-                                            </StackPanel.Width>
                                             <TextBlock x:Name="TextFirstName" Text="{Binding Patient.FirstName, Converter={StaticResource ToUpperCaseConverter}}" FontSize="17"/>
                                             <TextBlock x:Name="TextMidName" Text="{Binding Patient.MidName}" FontSize="17" Margin="0,-2"/>
                                             <TextBlock x:Name="TextLastName" Text="{Binding Patient.LastName}" FontSize="17"/>
@@ -106,7 +111,7 @@
             </ListBox>
             
             <ContentControl Grid.Column="1">
-                <controls:InfoPanel  BorderThickness="1,0,0,0" BorderBrush="{StaticResource BrushPrimaryBorderLight}"/>
+                <controls:InfoPanel BorderThickness="1,0,0,0" BorderBrush="{StaticResource BrushPrimaryBorderLight}"/>
             </ContentControl>
             <GridSplitter Grid.Column="1" ResizeDirection="Columns" HorizontalAlignment="Left" BorderThickness="2" BorderBrush="Transparent"/>
             
